test/files/neg/prefix-unary-nilary-removal.check
prefix-unary-nilary-removal.scala:4: error: unary prefix operator definition with empty parameter list is unsupported: instead, remove () to declare as `def unary_~ : Foo`
  def unary_~() : Foo = this
      ^
1 error
